--- a/index.html
+++ b/index.html
@@ -4,13 +4,20 @@
     <meta charset="utf-8">
     <title>Hello, World! - A-Frame</title>
     <meta name="description" content="Hello, World! - A-Frame">
-    <script src="https://aframe.io/releases/0.5.0/aframe.min.js"></script>
+    <script src="https://aframe.io/releases/0.9.0/aframe.min.js"></script>
+    <script src="https://unpkg.com/aframe-environment-component@1.1.0/dist/aframe-environment-component.min.js"></script>
   </head>
   <body>
-    <a-scene>
-      <a-gltf-model src="https://cdn.jsdelivr.net/gh/howchanghong/webVR@master/assets/singaporeGlobe2.gltf"></a-gltf-model>
-      <a-plane position="0 0 -4" rotation="-90 0 0" width="4" height="4" color="#7BC8A4"></a-plane>
-      <a-sky color="#ECECEC"></a-sky>
+    <a-scene renderer="colorManagement: true;">
+        <a-assets>
+          <a-asset-item id="changiAirportTower" src="/assets/singaporeGlobe2.gltf"></a-asset-item>
+        </a-assets>
+      <a-entity environment="preset:forest; lighting: none;"></a-entity> 
+      <a-entity light="type: ambient; color: #CCC; intensity: 0.5" ></a-entity>
+      <a-entity light="type: directional; color: #EEE; intensity: 0.5" position="0 1.5 3"></a-entity>
+      <a-entity camera="active: true" look-controls wasd-controls="fly:true" position="0 1.6 0"></a-entity>
+      <a-entity gltf-model="#changiAirportTower" position="-1.05 0 -4.394" scale="0.1 0.1 0.1"></a-entity>
+      
     </a-scene>
   </body>
 </html>
