Fixed asset reference

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <a-scene renderer="colorManagement: true;">
         <a-assets>
-          <a-asset-item id="changiAirportTower" src="/assets/singaporeGlobe2.gltf"></a-asset-item>
+          <a-asset-item id="changiAirportTower" src="https://cdn.jsdelivr.net/gh/howchanghong/webVR@master/assets/changiAirportTower.gltf"></a-asset-item>
         </a-assets>
       <a-entity environment="preset:forest; lighting: none;"></a-entity> 
       <a-entity light="type: ambient; color: #CCC; intensity: 0.5" ></a-entity>
