--- a/index.html
+++ b/index.html
@@ -2,22 +2,25 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Hello, World! - A-Frame</title>
+    <title>My Little Sunny Island</title>
     <meta name="description" content="Hello, World! - A-Frame">
+    <script src="map.js"></script>
     <script src="https://aframe.io/releases/0.9.0/aframe.min.js"></script>
     <script src="https://unpkg.com/aframe-environment-component@1.1.0/dist/aframe-environment-component.min.js"></script>
+    <script src="https://morandd.github.io/aframe-multitouch-look-controls/multitouch-look-controls.js"></script>
   </head>
   <body>
     <a-scene renderer="colorManagement: true;">
         <a-assets>
           <a-asset-item id="map" src="https://cdn.jsdelivr.net/gh/howchanghong/webVR@master/assets/map.glb"></a-asset-item>
           <a-asset-item id="changiAirportTower" src="https://cdn.jsdelivr.net/gh/howchanghong/webVR@master/assets/changiAirportTower.gltf"></a-asset-item>
+          <a-asset-item id="esplanade" src="https://cdn.jsdelivr.net/gh/howchanghong/webVR@master/assets/esplanade.glb"></a-asset-item>
         </a-assets>
       <a-entity environment="preset:threetowers; dressing: none;"></a-entity> 
       <a-entity light="type: ambient; color: #CCC; intensity: 0.5" ></a-entity>
       <a-entity light="type: directional; color: #EEE; intensity: 0.5" position="0 1.5 3"></a-entity>
       <!-- <a-entity camera="active: true" look-controls wasd-controls="fly:true" position="0 1.6 0"></a-entity> -->
-      <a-entity id="cameraRig" position="0 0 1.8" movement-controls="speed: 0.008; fly: true; camera: #head;" wasd-controls="fly:true" look-controls position-limit="ymin: -1; ymax: 100;">
+      <a-entity id="cameraRig" position="0 0 1.8" movement-controls="speed: 0.008; fly: true; camera: #head;" wasd-controls="fly:true" multitouch-look-controls look-controls position-limit="ymin: -1; ymax: 100;">
         <!-- camera -->
         <a-entity id="head" camera="active: true" look-controls position="0 1.6 0"><a-entity cursor="rayOrigin: mouse;" raycaster="far: 2;"></a-entity></a-entity>
         <!-- hand controls -->
@@ -37,6 +40,7 @@
 
       <a-entity gltf-model="#map" position="0 0.001 0"></a-entity>
       <a-entity gltf-model="#changiAirportTower" position="1.88 0 -0.03" scale="0.03 0.03 0.03"></a-entity>
+      <a-entity gltf-model="#esplanade" position="0.3 0 0.65" rotation="0 50 0" scale="0.01 0.01 0.01"></a-entity>
       
     </a-scene>
   </body>
