--- a/index.html
+++ b/index.html
@@ -15,14 +15,15 @@
           <a-asset-item id="map" src="https://cdn.jsdelivr.net/gh/howchanghong/webVR@master/assets/map.glb"></a-asset-item>
           <a-asset-item id="changiAirportTower" src="https://cdn.jsdelivr.net/gh/howchanghong/webVR@master/assets/changiAirportTower.gltf"></a-asset-item>
           <a-asset-item id="esplanade" src="https://cdn.jsdelivr.net/gh/howchanghong/webVR@master/assets/esplanade.glb"></a-asset-item>
+          <a-asset-item id="merlion" src="/assets/merlion.glb"></a-asset-item>
         </a-assets>
       <a-entity environment="preset:threetowers; dressing: none;"></a-entity> 
       <a-entity light="type: ambient; color: #CCC; intensity: 0.5" ></a-entity>
       <a-entity light="type: directional; color: #EEE; intensity: 0.5" position="0 1.5 3"></a-entity>
       <!-- <a-entity camera="active: true" look-controls wasd-controls="fly:true" position="0 1.6 0"></a-entity> -->
-      <a-entity id="cameraRig" position="0 0 1.8" multitouch-look-controls  position-limit="ymin: -1; ymax: 100;">
+      <a-entity id="cameraRig" position="0 0 3" multitouch-look-controls position-limit="ymin: -1; ymax: 100;">
         <!-- camera -->
-        <a-entity id="head" camera="active: true" movement-controls="speed: 0.008; fly: true; camera: #head;" wasd-controls="fly:true" position="0 1.6 0"><a-entity cursor="rayOrigin: mouse;" raycaster="far: 2;"></a-entity></a-entity>
+        <a-entity id="head" camera="active: true" movement-controls="speed: 0.008; fly: true; camera: #head;" wasd-controls="fly:true" position="0 1.2 0"><a-entity cursor="rayOrigin: mouse;" raycaster="far: 2;"></a-entity></a-entity>
         <!-- hand controls -->
         <a-mixin id="teleport"
                  teleport-controls="cameraRig: #cameraRig; button: trigger; teleportOrigin: #head; collisionEntities: #ground; curveShootingSpeed: 25; curveNumberPoints: 100;"
@@ -41,6 +42,7 @@
       <a-entity gltf-model="#map" position="0 0.001 0"></a-entity>
       <a-entity gltf-model="#changiAirportTower" position="1.88 0 -0.03" scale="0.03 0.03 0.03"></a-entity>
       <a-entity gltf-model="#esplanade" position="0.3 0 0.65" rotation="0 50 0" scale="0.01 0.01 0.01"></a-entity>
+      <a-entity gltf-model="#merlion" position="0.095 0 1.25" rotation="0 50 0" scale="-0.015 0.015 0.015"></a-entity>
       
     </a-scene>
   </body>
