fixed merlion path

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           <a-asset-item id="map" src="https://cdn.jsdelivr.net/gh/howchanghong/webVR@master/assets/map.glb"></a-asset-item>
           <a-asset-item id="changiAirportTower" src="https://cdn.jsdelivr.net/gh/howchanghong/webVR@master/assets/changiAirportTower.gltf"></a-asset-item>
           <a-asset-item id="esplanade" src="https://cdn.jsdelivr.net/gh/howchanghong/webVR@master/assets/esplanade.glb"></a-asset-item>
-          <a-asset-item id="merlion" src="/assets/merlion.glb"></a-asset-item>
+          <a-asset-item id="merlion" src="https://cdn.jsdelivr.net/gh/howchanghong/webVR@master/assets/assets/merlion.glb"></a-asset-item>
         </a-assets>
       <a-entity environment="preset:threetowers; dressing: none;"></a-entity> 
       <!-- <a-ocean depth="25" density="15" speed="2"></a-ocean> -->
